[gd_scene load_steps=8 format=3 uid="uid://bg00djokvttb1"]

[ext_resource type="LabelSettings" uid="uid://dlx67ty00ecj7" path="res://_project_system_files/label_level_select_settings.tres" id="1_7cqji"]
[ext_resource type="Script" uid="uid://bdemtxoydbs2x" path="res://scenes/weapon_screen/weapon_button.gd" id="1_35yuf"]
[ext_resource type="Texture2D" uid="uid://cpofdov8dsfi8" path="res://sprites/ui/ammo_bar_segment_texture_h.png" id="3_tjsrn"]

[sub_resource type="Gradient" id="Gradient_tjsrn"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wsjni"]
gradient = SubResource("Gradient_tjsrn")
width = 56
height = 8

[sub_resource type="Gradient" id="Gradient_uxov2"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_35yuf"]
gradient = SubResource("Gradient_uxov2")
width = 56
height = 8
fill_to = Vector2(0, 1)
repeat = 1

[node name="weapon_button" type="Button"]
offset_right = 80.0
offset_bottom = 9.0
flat = true
script = ExtResource("1_35yuf")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 12.0
offset_bottom = 9.0
text = "P"
label_settings = ExtResource("1_7cqji")

[node name="ammo" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_right = 76.0
offset_bottom = 8.0
max_value = 28.0
value = 28.0
texture_under = SubResource("GradientTexture2D_wsjni")
texture_over = ExtResource("3_tjsrn")
texture_progress = SubResource("GradientTexture2D_35yuf")

[node name="blinker" type="Timer" parent="."]
wait_time = 0.25

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="blinker" to="." method="_on_blinker_timeout"]
